	PR c++/8888: 	* symtab.c (lookup_symbol_aux): If constructor is found, consider 	returning the type instead. 	* c-exp.y (classify_name): Check STRUCT_DOMAIN if a constructor is 	found. testsuite 	* gdb.cp/member-name.exp: New file. 	* gdb.cp/member-name.cc: New file.